# testmark

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  biome.jsonc  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts
adapters/pytest/: README.md  pyproject.toml  testmark.py
adapters/vitest/: index.ts
examples/: files.test.md  slugify.test.md  slugify.ts
python/: .gitignore  README.md  mdtest.py  pyproject.toml  test_mdtest.py  test_testmark.py  testmark.py
specs/: cli.spec.md  parser.spec.md
src/: cli.ts  index.ts  parser.ts
src/adapters/: vitest.ts
src/utils/: markdown.ts  tag-utils.ts  tags.ts  test-validation.ts  validation.ts
tests/: cli.test.ts  examples.test.ts  parser.test.md  parser.test.ts
